Issue #25 centre align inform popups

--- a/src/www/css/style.css
+++ b/src/www/css/style.css
@@ -129,31 +129,29 @@ a:active, img:active{
 /********* Body *************/
 
 body .ui-loader{
-    z-index: 2000;
-    font-size: 2em;
+    left: 0;
+    right: 0;
     color: black;
     opacity: 1;
-    padding: 0;
-    width: auto;
-    height: auto;
-    max-width: 15em;
+    min-width: 50%;
+    min-height: 20%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
 }
 
 .ui-loader h1{
-    padding: 0.5em;
-    font-size: 2em;
     width: 100%;
     height: 100%;
 }
 
 body .ui-loader .ui-icon{
-    border: 0;
     margin: 10px auto 0 auto;
 }
 
-.ui-btn-icon-notext .ui-btn-inner .ui-icon {
-    margin: 2px 0 0 3px;
-    box-shadow: none;
+body .ui-loader-textonly{
+    min-height: 10%;
 }
 
 
@@ -627,7 +625,8 @@ div.record-extra > div > img {
 #saved-records-page-header h2{
     margin: 0;
     padding: 0;
-    padding-top: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     padding-left: 1em;
     color: white;
     background: #2c3f62;
